<resources>
    <string name="app_name">Mr. Chef</string>
    <string name="settings">Settings</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="title_activity_recipe_step">RecipeStepActivity</string>
    <string name="favorite_recipes">Favorite Recipes</string>
    <string name="recipes">Recipes</string>
    <string name="step_desp_hint">2. Melt the butter and bittersweet chocolate together in a microwave or a double boiler. If microwaving, heat for 30 seconds at a time, removing bowl and stirring ingredients in between.</string>
    <string name="no_recipes">No Recipes!</string>
    <string name="cheese_cake">Cheese Cake</string>
    <string name="back_button">back button</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="steps">Steps</string>
    <string name="ingredients">Ingredients</string>
    <string name="_30gm">30gm</string>
    <string name="bittersweet_chocolate_60_70_cacao">Bittersweet chocolate (60-70% cacao)</string>
    <string name="recipe_image_view">recipe image view</string>
    <string name="brownies">Brownies</string>
    <string name="nutella_or_other_chocolate_hazelnut_spread">Nutella or other chocolate-hazelnut spread</string>
    <string name="_1_0">1.0</string>
    <string name="recipe_added_successfully">Recipe Added Successfully</string>
    <string name="today_s_special">Today\'s Special</string>
    <string name="other_recipes">Other Recipes</string>
    <string name="login_screen_image">Login Screen Image</string>
    <string name="sign_in">Sign In</string>
    <string name="delete">Delete</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="qty">QTY</string>
    <string name="step_title">Step Title</string>
    <string name="step_description">Step Description</string>
    <string name="video_url">Video Url</string>
    <string name="add_video">Add Video</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="add_ingredients_button">Add Ingredients Button</string>
    <string name="add_steps_button">Add Steps Button</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="add_another_recipe">Add another recipe</string>
    <string name="favorite_recipes_is_selected">Favorite Recipes is selected</string>
    <string name="recipes_is_selected">Recipes is selected</string>
    <string name="add_recipe_is_selected">Add recipe is selected</string>
    <string name="settings_is_selected">Settings is selected</string>
    <string name="click_to_add_recipe_image">Click to add Recipe Image</string>
    <string name="click_here_to_mark_recipe_as_favorite">Click here to mark recipe as favorite</string>
    <string name="click_here_to_view_previous_video">Click here to view previous video</string>
    <string name="click_here_to_view_the_next_video">Click here to view the next video</string>
    <string name="no_recipes_image">No recipes Image</string>
    <string name="video_player">Video Player</string>
    <string name="no_network_available">No Network Available</string>
    <string name="retry">Retry</string>
    <string name="sign_out">Sign Out</string>
    <string name="kavin_raju_s">Kavin Raju S</string>
    <string name="user_picture">User Picture</string>

    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="applicationID">ca-app-pub-3940256099942544~3347511713</string>

    <string name="play_previous">Play previous</string>
    <string name="rewind">Rewind</string>
    <string name="repeat_toogle">Repeat toogle</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="play_next">Play next</string>
    <string name="full_screen">Full Screen</string>
    <string name="enter_your_recipe_step_title_description_and_video_url_here">Enter your recipe step title, description and video URL here</string>
    <string name="toast_msg_added_as_favorite">Added as Favorite</string>
    <string name="about">About</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="close_about_screen">Close about screen</string>
    <string name="github">GitHub</string>
    <string name="linkedin">LinkedIn</string>
    <string name="twitter">Twitter</string>
    <string name="gmail">Gmail</string>
    <string name="s_kavin_raju">S.Kavin Raju</string>
    <string name="app_developed_by">App developed by</string>
    <string name="desp_desp">Andorid Developer | Google Udacity India Scholar - #introductions channel moderator</string>
</resources>
