<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">
    <item
        android:id="@+id/action_aboutUs"
        android:orderInCategory="1"
        android:title="@string/about"
        android:icon="@drawable/ic_info_outline_black_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_send_feedback"
        android:orderInCategory="2"
        android:title="@string/send_feedback"
        android:icon="@drawable/ic_send_black_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="3"
        android:title="@string/sign_out"
        app:showAsAction="never" />
</menu>
