<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:background="#CC000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="4dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/exo_prev"
            android:tint="@color/colorPrimaryLight"
            android:contentDescription="@string/play_previous"
            style="@style/ExoMediaButton.Previous"/>

        <ImageButton
            android:id="@+id/exo_rew"
            android:tint="@color/colorPrimaryLight"
            android:contentDescription="@string/rewind"
            style="@style/ExoMediaButton.Rewind"/>

        <ImageButton
            android:id="@+id/exo_repeat_toggle"
            android:tint="@color/colorPrimaryLight"
            android:contentDescription="@string/repeat_toogle"
            style="@style/ExoMediaButton"/>

        <ImageButton
            android:id="@+id/exo_play"
            android:tint="@color/colorPrimaryLight"
            android:contentDescription="@string/play"
            style="@style/ExoMediaButton.Play"/>

        <ImageButton
            android:id="@+id/exo_pause"
            android:tint="@color/colorPrimaryLight"
            android:contentDescription="@string/pause"
            style="@style/ExoMediaButton.Pause"/>
        <ImageButton
            android:id="@+id/exo_next"
            android:tint="@color/colorPrimaryLight"
            android:contentDescription="@string/play_next"
            style="@style/ExoMediaButton.Next"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:includeFontPadding="false"
            android:textColor="@color/colorPrimaryDark"/>

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@id/exo_progress"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="26dp"
            app:ad_marker_color="@color/colorSecondaryDark"
            app:played_color="@color/colorSecondaryLight"
            app:buffered_color="@color/colorBuffered"
            app:unplayed_color="@color/colorUnplayed" />

        <TextView android:id="@id/exo_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:includeFontPadding="false"
            android:textColor="@color/colorPrimaryDark"/>

        <FrameLayout
            android:id="@+id/exo_fullscreen_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end">

            <ImageView
                android:id="@+id/exo_fullscreen_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:contentDescription="@string/full_screen"
                android:src="@drawable/ic_fullscreen_expand"/>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>