<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_name"
        android:padding="@dimen/padding_8dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Large"/>
    <LinearLayout
        android:id="@+id/linear_layout_ingredients"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="3">

        <TextView
            android:id="@+id/tv_recipe_ingredient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:hint="@string/nutella_or_other_chocolate_hazelnut_spread"
            android:textColor="@color/black"
            style="@style/TextAppearance.AppCompat.Button"
            android:padding="@dimen/padding_4dp" />
        <TextView
            android:id="@+id/tv_recipe_ingredient_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_1_0"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            style="@style/TextAppearance.AppCompat.Button"
            android:padding="@dimen/padding_4dp" />
    </LinearLayout>

</LinearLayout>