<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/tv_recyclerview_1_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/today_s_special"
            style="@style/RecipeFragmentHead"
            android:textSize="@dimen/textSize_recyclerview_1_head"

            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_16dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_home"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recyclerview_1_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_recyclerview_2_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/other_recipes"
            style="@style/RecipeFragmentHead"
            android:textSize="@dimen/textSize_recyclerview_2_head"

            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_16dp"

            app:layout_constraintTop_toBottomOf="@id/recyclerview_home"
            app:layout_constraintStart_toStartOf="parent"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_2_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:nestedScrollingEnabled="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recyclerview_2_head"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ProgressBar
            android:id="@+id/pb_other_recpies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recyclerview_2_head"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/linear_layout_no_recipies"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/tv_recyclerview_2_head"
            app:layout_constraintRight_toRightOf="@id/tv_recyclerview_2_head"
            app:layout_constraintTop_toBottomOf="@id/tv_recyclerview_2_head">

            <ImageView
                android:layout_width="@dimen/no_recipes_icon_width"
                android:layout_height="@dimen/no_recipes_icon_height"
                android:layout_gravity="center"
                android:contentDescription="@string/no_recipes_image"
                android:src="@drawable/cake_color_sec_dark_24dp"/>
            <TextView
                android:id="@+id/tv_widget_no_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:text="@string/no_recipes"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="@dimen/padding_8dp"
                style="@style/Base.TextAppearance.AppCompat.Large" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_no_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:cardCornerRadius="@dimen/card_radius_4dp"
            app:cardElevation="@dimen/cardelevation_1dp"
            app:cardUseCompatPadding="true"

            android:layout_margin="@dimen/margin_32dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recyclerview_2_head">

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_recipe_added_successfully"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    style="@style/TextAppearance.AppCompat.Large"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/no_network_available"

                    android:padding="@dimen/padding_8dp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_no_wifi" />

                <ImageView
                    android:id="@+id/iv_no_wifi"
                    android:layout_width="@dimen/iv_no_wifi_width"
                    android:layout_height="@dimen/iv_no_wifi_height"

                    android:src="@drawable/ic_signal_wifi_off_primary_dark_24dp"
                    android:layout_margin="@dimen/margin_8dp"
                    android:contentDescription="@string/app_name"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_no_wifi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:text="@string/retry"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:background="@drawable/ripple_rounded_primary_dark_borderless"
                    android:contentDescription="@string/retry"
                    android:onClick="onClickNetworkRetry"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_recipe_added_successfully" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
