<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_user_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:cardCornerRadius="@dimen/card_radius_4dp"
        app:cardElevation="@dimen/cardelevation_4dp"
        app:cardUseCompatPadding="true"

        android:layout_margin="@dimen/margin_16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_user_name"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="sans-serif-smallcaps"
                android:textStyle="bold"
                android:padding="@dimen/padding_8dp"
                android:text="@string/kavin_raju_s"
                android:textColor="@color/colorPrimaryDark"


                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_16dp"

                app:layout_constraintBottom_toBottomOf="@+id/iv_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_user"
                app:layout_constraintTop_toTopOf="@+id/iv_user" />

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="@dimen/iv_user_width"
                android:layout_height="0dp"

                android:contentDescription="@string/user_picture"
                android:scaleType="fitXY"

                android:src="@drawable/scrim_gradient"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/btn_sign_out"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:background="@drawable/ripple_rounded_primary_dark_borderless"
                android:contentDescription="@string/sign_out"
                android:onClick="onClickSignOut"
                android:text="@string/sign_out"

                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_user"
                app:layout_constraintTop_toBottomOf="@id/tv_user_name" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>